update basic usage draft to include atomic types and type validation sneak peak

--- a/notebooks/2-basic-usage.ipynb
+++ b/notebooks/2-basic-usage.ipynb
@@ -8,10 +8,12 @@
     "# 2. Basic Usage\n",
     "\n",
     "**Concepts:**\n",
-    "* Refresher on Python type annotations and class definitions\n",
+    "* Refresher: Python type annotations and class definitions\n",
     "* Creation of a simple Pydantic model\n",
     "* Initializing models and setting model attributes\n",
     "* Type parsing\n",
+    "* Atomic types\n",
+    "* Type validation (sneak peak)\n",
     "* Default values and optional values\n",
     "* Model Config and Config.extra = “forbid”\n",
     "\n",
@@ -254,11 +256,11 @@
      "output_type": "stream",
      "text": [
       "\n",
-      " <__main__.PointV1 object at 0x1032976a0>\n",
+      " <__main__.PointV1 object at 0x108037d90>\n",
       "point.x = '5' and type(point.x) = <class 'str'>\n",
       "point.y = '7' and type(point.y) = <class 'str'>\n",
       "\n",
-      " <__main__.PointV1 object at 0x10340a670>\n",
+      " <__main__.PointV1 object at 0x1081ab460>\n",
       "point.x = -1 and type(point.x) = <class 'int'>\n",
       "point.y = 4 and type(point.y) = <class 'int'>\n",
       "\n",
@@ -358,9 +360,142 @@
    "source": [
     "we obtain the distance between the two points! This is thanks to Pydantic's type parsing.\n",
     "\n",
-    "## Default and optional values\n",
+    "## Atomic types\n",
     "\n",
-    "From this point on, I will refer to Pydantic model attributes as fields. The reason will become clear later.\n",
+    "From this point on, I will refer to Pydantic model attributes as fields, as is doe in the Pydantic documentation.\n",
+    "\n",
+    "Pydantic supports a large variety of field types but the most basic are `None`, `bool`, `int`, `float`, `str` and `bytes`.\n",
+    "\n",
+    "### `None`\n",
+    "\n",
+    "The only allowed value is `None`.\n",
+    "\n",
+    "### `bool`\n",
+    "\n",
+    "The allowed for `True` are `{True, 1, \"1\", \"on\", \"t\", \"true\", \"y\", \"yes\"}`. The allowed values for `False` are `{False, 0, \"0\", \"off\", \"f\", \"false\", \"n\", \"no\"}`.\n",
+    "\n",
+    "### `int`\n",
+    "\n",
+    "`int(v)` will be used to coerce values to the `int` type. WARNING: This can lead to a loss of information. If `x` is type hinted as `int` and the provided value is `2.72`, the resulting value of `x` will be `2` because `int(2.72) == 2`.\n",
+    "\n",
+    "### `float`\n",
+    "\n",
+    "`float(v)` will be used to coerce values to the `float` type.\n",
+    "\n",
+    "### `str`\n",
+    "\n",
+    "`str(v)` will be used to coerce numeric types and `v.decode()` will be used to coerce `bytes` and `bytearray`.\n",
+    "\n",
+    "### `bytes`\n",
+    "\n",
+    "`bytes(v)` will be used to coerce `bytearray`, `v.decode()` will be used to coerce `str`, and `str(v).decode()` will be used to coerce numeric types.\n",
+    "\n",
+    "Let's see an example of type coercion for each of these types (with the exception of `None` which does not use coercion)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "323e13bc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "TypeCoercionExample(v_bool=False, v_int=25, v_float=1.0, v_str='False', v_bytes=b'hello')"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "class TypeCoercionExample(BaseModel):\n",
+    "    v_bool: bool\n",
+    "    v_int: int\n",
+    "    v_float: float\n",
+    "    v_str: str\n",
+    "    v_bytes: bytes\n",
+    "\n",
+    "\n",
+    "display(\n",
+    "    TypeCoercionExample(\n",
+    "        v_bool=\"no\",\n",
+    "        v_int=25.7,\n",
+    "        v_float=True,\n",
+    "        v_str=False,\n",
+    "        v_bytes=\"hello\",\n",
+    "    )\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b8cb5b06",
+   "metadata": {},
+   "source": [
+    "As expected\n",
+    "* `v_bool=\"no\"` was coerced to `v_bool=False`\n",
+    "* `v_int=25.7` was coerced to `v_int=25`    (Note the loss of information mentioned above)\n",
+    "* `v_float=True` was coerced to `v_float=1.0`\n",
+    "* `v_str=False` was coerced to `v_str='False'`\n",
+    "* `v_bytes=\"hello\"` was coerced to `v_bytes=b'hello'`\n",
+    "\n",
+    "A detailed description of supported types can be found in the \"Field Types\" documentation page: https://docs.pydantic.dev/latest/usage/types/\n",
+    "\n",
+    "## Type validation (sneak peak)\n",
+    "\n",
+    "What happens when type coercion fails? This brings us to one of the main benefits of using Pydantic -- type validation. We will be discussing this in much more detail in part 3 of this tutorial, but let's get a sense of what will happen now while type coercion is still fresh in our minds.\n",
+    "\n",
+    "Recall our earlier example od the two-dimensional coordinate points. If we provided invalid arguments for `PointV1` and `PointV2` (recall these were not Pydantic models), the classes would happily instantiate and we would not see an error until later when trying to compute the distance between two points. And the error message didn't really point to the root cause of the problem, which was the invalid arguments during instantiation. We also showed that when using a Pydantic model (`PointV3`), Pydantic would attempt to correct our mistake for us using type coercion. But what if we provide arguments where type coercion fails? Let's find out. Returning to the earlier example, let's now provide arguments that will not pass type coercion."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "b9d4c099",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValidationError",
+     "evalue": "1 validation error for PointV3\ny\n  value is not a valid float (type=type_error.float)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValidationError\u001b[0m                           Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[11], line 13\u001b[0m\n\u001b[1;32m     10\u001b[0m         dy \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39my \u001b[38;5;241m-\u001b[39m other\u001b[38;5;241m.\u001b[39my\n\u001b[1;32m     11\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m (dx\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m2\u001b[39m \u001b[38;5;241m+\u001b[39m dy\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m2\u001b[39m)\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m0.5\u001b[39m\n\u001b[0;32m---> 13\u001b[0m \u001b[43mPointV3\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m     14\u001b[0m \u001b[43m    \u001b[49m\u001b[43mx\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m5\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[1;32m     15\u001b[0m \u001b[43m    \u001b[49m\u001b[43my\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mthis string cannot be coerced to a float\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[1;32m     16\u001b[0m \u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m~/opt/anaconda3/envs/scipy-2023-pydantic-tutorial/lib/python3.9/site-packages/pydantic/main.py:341\u001b[0m, in \u001b[0;36mpydantic.main.BaseModel.__init__\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;31mValidationError\u001b[0m: 1 validation error for PointV3\ny\n  value is not a valid float (type=type_error.float)"
+     ]
+    }
+   ],
+   "source": [
+    "class PointV3(BaseModel):\n",
+    "    \"\"\"Representation of a two-dimensional point coordinate.\"\"\"\n",
+    "\n",
+    "    x: float\n",
+    "    y: float\n",
+    "\n",
+    "    def distance_to(self, other: \"PointV3\") -> float:\n",
+    "        \"\"\"Computes the distance to another `PointV3`.\"\"\"\n",
+    "        dx = self.x - other.x\n",
+    "        dy = self.y - other.y\n",
+    "        return (dx**2 + dy**2)**0.5\n",
+    "\n",
+    "PointV3(\n",
+    "    x=5,\n",
+    "    y=\"this string cannot be coerced to a float\",\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6f5f11dd",
+   "metadata": {},
+   "source": [
+    "Pydantic throws an error at the root cause and provides a helpful message! The message tells us that the provided value for field `y` is not valid for type `float`. This is potentially a big time saver when it comes to debugging. As mentioned above we will be diving much deeper into type validation later, but hopefully you now have a sense of what it is and why it is useful.\n",
+    "\n",
+    "## Default and optional values\n",
     "\n",
     "We can provide default field values by providing an `=` followed by the default value. We can create optional fields by importing `typing.Optional` and surrounding the type hint with `Optional`. The value of optional fields when not supplied by the user will be `None`.\n",
     "\n",
@@ -369,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "id": "a3cd4442",
    "metadata": {},
    "outputs": [],
@@ -396,7 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "id": "cc6551e4",
    "metadata": {},
    "outputs": [
@@ -454,7 +589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "id": "7a0ff423",
    "metadata": {},
    "outputs": [
@@ -484,7 +619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "id": "da0fe9e0",
    "metadata": {},
    "outputs": [
@@ -520,7 +655,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "id": "b6cc7c85",
    "metadata": {},
    "outputs": [
@@ -531,7 +666,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mValidationError\u001b[0m                           Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[14], line 13\u001b[0m\n\u001b[1;32m      9\u001b[0m     \u001b[38;5;28;01mclass\u001b[39;00m \u001b[38;5;21;01mConfig\u001b[39;00m:\n\u001b[1;32m     10\u001b[0m         extra \u001b[38;5;241m=\u001b[39m Extra\u001b[38;5;241m.\u001b[39mforbid\n\u001b[1;32m     12\u001b[0m display(\n\u001b[0;32m---> 13\u001b[0m     \u001b[43mLineSegment\u001b[49m\u001b[43m(\u001b[49m\u001b[43mx2\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43my2\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m9\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mhello\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mworld\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m     14\u001b[0m )\n",
+      "Cell \u001b[0;32mIn[16], line 13\u001b[0m\n\u001b[1;32m      9\u001b[0m     \u001b[38;5;28;01mclass\u001b[39;00m \u001b[38;5;21;01mConfig\u001b[39;00m:\n\u001b[1;32m     10\u001b[0m         extra \u001b[38;5;241m=\u001b[39m Extra\u001b[38;5;241m.\u001b[39mforbid\n\u001b[1;32m     12\u001b[0m display(\n\u001b[0;32m---> 13\u001b[0m     \u001b[43mLineSegment\u001b[49m\u001b[43m(\u001b[49m\u001b[43mx2\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43my2\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m9\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mhello\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mworld\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m     14\u001b[0m )\n",
       "File \u001b[0;32m~/opt/anaconda3/envs/scipy-2023-pydantic-tutorial/lib/python3.9/site-packages/pydantic/main.py:341\u001b[0m, in \u001b[0;36mpydantic.main.BaseModel.__init__\u001b[0;34m()\u001b[0m\n",
       "\u001b[0;31mValidationError\u001b[0m: 1 validation error for LineSegment\nhello\n  extra fields not permitted (type=value_error.extra)"
      ]
@@ -556,9 +691,52 @@
   },
   {
    "cell_type": "markdown",
+   "id": "202e8503",
+   "metadata": {},
+   "source": [
+    "Class inheritance works as expected with Pydantic models..."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "1891c2ac",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A.Config.extra = <Extra.forbid: 'forbid'>\tA.__fields__.keys() = dict_keys(['x'])\n",
+      "B.Config.extra = <Extra.forbid: 'forbid'>\tB.__fields__.keys() = dict_keys(['x', 'y'])\n",
+      "C.Config.extra = <Extra.ignore: 'ignore'>\tC.__fields__.keys() = dict_keys(['z'])\n"
+     ]
+    }
+   ],
+   "source": [
+    "class A(BaseModel):\n",
+    "    x: int\n",
+    "    class Config:\n",
+    "        extra = Extra.forbid\n",
+    "\n",
+    "class B(A):\n",
+    "    y: bool\n",
+    "\n",
+    "class C(BaseModel):\n",
+    "    z: str\n",
+    "\n",
+    "print(f\"{A.Config.extra = }\\t{A.__fields__.keys() = }\")\n",
+    "print(f\"{B.Config.extra = }\\t{B.__fields__.keys() = }\")\n",
+    "print(f\"{C.Config.extra = }\\t{C.__fields__.keys() = }\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "eaa8081a",
    "metadata": {},
    "source": [
+    "Notice that `B`, which inherits from `A`, inherits the field, `x`, and configuration, `extra = Extra.forbid` of `A`, while `C`, which is a base Pydantic model, does not contain the field `x` and obtains the default value of `Extra.ignore` for the `extra` configuration.\n",
+    "\n",
     "A detailed description of possible configurations can be found in the \"Model Config\" documentation page: https://docs.pydantic.dev/latest/usage/model_config/"
    ]
   }
