Run pre-commit hook

--- a/notebooks/2-basic-usage.ipynb
+++ b/notebooks/2-basic-usage.ipynb
@@ -41,7 +41,7 @@
     "        \"\"\"Computes the distance to another `PointV1`.\"\"\"\n",
     "        dx = self.x - other.x\n",
     "        dy = self.y - other.y\n",
-    "        return (dx**2 + dy**2)**0.5"
+    "        return (dx**2 + dy**2) ** 0.5"
    ]
   },
   {
@@ -115,7 +115,7 @@
     "        \"\"\"Computes the distance to another `PointV2`.\"\"\"\n",
     "        dx = self.x - other.x\n",
     "        dy = self.y - other.y\n",
-    "        return (dx**2 + dy**2)**0.5"
+    "        return (dx**2 + dy**2) ** 0.5"
    ]
   },
   {
@@ -163,7 +163,8 @@
     "        \"\"\"Computes the distance to another `PointV3`.\"\"\"\n",
     "        dx = self.x - other.x\n",
     "        dy = self.y - other.y\n",
-    "        return (dx**2 + dy**2)**0.5\n",
+    "        return (dx**2 + dy**2) ** 0.5\n",
+    "\n",
     "\n",
     "p2 = PointV3(x=-1, y=4)\n",
     "display(p2)"
@@ -368,7 +369,8 @@
     "        \"\"\"Computes the distance to another `PointV3`.\"\"\"\n",
     "        dx = self.x - other.x\n",
     "        dy = self.y - other.y\n",
-    "        return (dx**2 + dy**2)**0.5\n",
+    "        return (dx**2 + dy**2) ** 0.5\n",
+    "\n",
     "\n",
     "PointV3(\n",
     "    x=5,\n",
@@ -401,7 +403,6 @@
     "\n",
     "\n",
     "class LineSegment(BaseModel):\n",
-    "\n",
     "    x1: float = 0.0\n",
     "    y1: float = 0.0\n",
     "    x2: float\n",
@@ -424,15 +425,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "display(\n",
-    "    LineSegment(x1=5, y1=6, x2=1, y2=9, label=\"red\")\n",
-    ")\n",
-    "display(\n",
-    "    LineSegment(x2=1, y2=9, label=\"red\")\n",
-    ")\n",
-    "display(\n",
-    "    LineSegment(x2=1, y2=9)\n",
-    ")"
+    "display(LineSegment(x1=5, y1=6, x2=1, y2=9, label=\"red\"))\n",
+    "display(LineSegment(x2=1, y2=9, label=\"red\"))\n",
+    "display(LineSegment(x2=1, y2=9))"
    ]
   },
   {
@@ -454,9 +449,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "display(\n",
-    "    LineSegment(x2=1, y2=9, hello=\"world\")\n",
-    ")"
+    "display(LineSegment(x2=1, y2=9, hello=\"world\"))"
    ]
   },
   {
@@ -478,7 +471,6 @@
     "\n",
     "\n",
     "class LineSegment(BaseModel):\n",
-    "\n",
     "    x1: float = 0.0\n",
     "    y1: float = 0.0\n",
     "    x2: float\n",
@@ -488,9 +480,8 @@
     "    class Config:\n",
     "        extra = Extra.allow\n",
     "\n",
-    "display(\n",
-    "    LineSegment(x2=1, y2=9, hello=\"world\")\n",
-    ")"
+    "\n",
+    "display(LineSegment(x2=1, y2=9, hello=\"world\"))"
    ]
   },
   {
@@ -501,7 +492,6 @@
    "outputs": [],
    "source": [
     "class LineSegment(BaseModel):\n",
-    "\n",
     "    x1: float = 0.0\n",
     "    y1: float = 0.0\n",
     "    x2: float\n",
@@ -511,9 +501,8 @@
     "    class Config:\n",
     "        extra = Extra.forbid\n",
     "\n",
-    "display(\n",
-    "    LineSegment(x2=1, y2=9, hello=\"world\")\n",
-    ")"
+    "\n",
+    "display(LineSegment(x2=1, y2=9, hello=\"world\"))"
    ]
   },
   {
@@ -533,14 +522,18 @@
    "source": [
     "class A(BaseModel):\n",
     "    x: int\n",
+    "\n",
     "    class Config:\n",
     "        extra = Extra.forbid\n",
+    "\n",
     "\n",
     "class B(A):\n",
     "    y: bool\n",
     "\n",
+    "\n",
     "class C(BaseModel):\n",
     "    z: str\n",
+    "\n",
     "\n",
     "print(f\"{A.Config.extra = }\\t{A.__fields__.keys() = }\")\n",
     "print(f\"{B.Config.extra = }\\t{B.__fields__.keys() = }\")\n",
