--- a/notebooks/3-advanced-usage.ipynb
+++ b/notebooks/3-advanced-usage.ipynb
@@ -35,8 +35,10 @@
    "source": [
     "from pydantic import BaseModel\n",
     "\n",
+    "\n",
     "class LineV1(BaseModel):\n",
     "    \"\"\"A Line object that can be used to represent a line.\"\"\"\n",
+    "\n",
     "    x: list[float]\n",
     "    y: list[float]\n",
     "\n",
@@ -45,8 +47,11 @@
     "        length = 0\n",
     "\n",
     "        for idx in range(len(self.x) - 1):\n",
-    "            length += ((self.x[idx] - self.x[idx + 1]) ** 2 + (self.y[idx] - self.y[idx + 1]) ** 2) ** 0.5\n",
-    "        \n",
+    "            length += (\n",
+    "                (self.x[idx] - self.x[idx + 1]) ** 2\n",
+    "                + (self.y[idx] - self.y[idx + 1]) ** 2\n",
+    "            ) ** 0.5\n",
+    "\n",
     "        return length"
    ]
   },
@@ -104,8 +109,10 @@
     "from pydantic import BaseModel\n",
     "from enum import Enum\n",
     "\n",
+    "\n",
     "class LineColor(str, Enum):\n",
     "    \"\"\"Line color enum\"\"\"\n",
+    "\n",
     "    red = \"red\"\n",
     "    green = \"green\"\n",
     "    blue = \"blue\"\n",
@@ -113,6 +120,7 @@
     "\n",
     "class LineV2(BaseModel):\n",
     "    \"\"\"A Line object that can be used to represent a line.\"\"\"\n",
+    "\n",
     "    x: list[float]\n",
     "    y: list[float]\n",
     "    color: LineColor = LineColor.red\n",
@@ -122,8 +130,11 @@
     "        length = 0\n",
     "\n",
     "        for idx in range(len(self.x) - 1):\n",
-    "            length += ((self.x[idx] - self.x[idx + 1]) ** 2 + (self.y[idx] - self.y[idx + 1]) ** 2) ** 0.5\n",
-    "        \n",
+    "            length += (\n",
+    "                (self.x[idx] - self.x[idx + 1]) ** 2\n",
+    "                + (self.y[idx] - self.y[idx + 1]) ** 2\n",
+    "            ) ** 0.5\n",
+    "\n",
     "        return length"
    ]
   },
@@ -134,7 +145,7 @@
    "outputs": [],
    "source": [
     "line_v2 = LineV2(x=[0, 1, 2], y=[0, 1, 2], color=\"red\")\n",
-    "display(line_v2) "
+    "display(line_v2)"
    ]
   },
   {
@@ -171,8 +182,10 @@
     "from pydantic import BaseModel\n",
     "from enum import Enum\n",
     "\n",
+    "\n",
     "class LineColor(str, Enum):\n",
     "    \"\"\"Line color enum\"\"\"\n",
+    "\n",
     "    red = \"red\"\n",
     "    green = \"green\"\n",
     "    blue = \"blue\"\n",
@@ -180,9 +193,10 @@
     "\n",
     "class LineV2(BaseModel):\n",
     "    \"\"\"A Line object that can be used to represent a line.\"\"\"\n",
+    "\n",
     "    x: list[float]\n",
     "    y: list[float]\n",
-    "    color: Union[LineColor, None] = LineColor.red\n"
+    "    color: Union[LineColor, None] = LineColor.red"
    ]
   },
   {
@@ -214,8 +228,10 @@
    "source": [
     "from datetime import datetime\n",
     "\n",
+    "\n",
     "class LonLatTimeVector(BaseModel):\n",
     "    \"\"\"Represent a position on earth with time.\"\"\"\n",
+    "\n",
     "    lon: float\n",
     "    lat: float\n",
     "    time: datetime = None"
@@ -252,6 +268,7 @@
    "source": [
     "from pydantic import BaseModel\n",
     "\n",
+    "\n",
     "class Point(BaseModel):\n",
     "    \"\"\"Representation of a two-dimensional point coordinate.\"\"\"\n",
     "\n",
@@ -262,14 +279,15 @@
     "        \"\"\"Computes the distance to another `PointV3`.\"\"\"\n",
     "        dx = self.x - other.x\n",
     "        dy = self.y - other.y\n",
-    "        return (dx**2 + dy**2)**0.5\n",
+    "        return (dx**2 + dy**2) ** 0.5\n",
     "\n",
     "\n",
     "class Triangle(BaseModel):\n",
     "    \"\"\"Representation of a triangle\"\"\"\n",
-    "    point_a : Point\n",
-    "    point_b : Point\n",
-    "    point_c : Point\n",
+    "\n",
+    "    point_a: Point\n",
+    "    point_b: Point\n",
+    "    point_c: Point\n",
     "\n",
     "    def circumference(self):\n",
     "        \"\"\"Circumference of the triangle\"\"\"\n",
@@ -278,6 +296,7 @@
     "            + self.point_b.distance_to(self.point_c)\n",
     "            + self.point_c.distance_to(self.point_a)\n",
     "        )\n",
+    "\n",
     "\n",
     "triangle = Triangle(\n",
     "    point_a=Point(x=0, y=0),\n",
@@ -305,6 +324,7 @@
    "source": [
     "class LineV3(BaseModel):\n",
     "    \"\"\"Line object\"\"\"\n",
+    "\n",
     "    points = list[Point]\n",
     "\n",
     "    def length(self):\n",
@@ -313,8 +333,8 @@
     "\n",
     "        for point, next_point in zip(self.points[:-1], self.points[1:]):\n",
     "            length += point.distance_to(next_point)\n",
-    "        \n",
-    "        return length\n"
+    "\n",
+    "        return length"
    ]
   },
   {
@@ -378,7 +398,6 @@
     "\n",
     "\n",
     "class User(BaseModel):\n",
-    "\n",
     "    username: str\n",
     "    password1: str\n",
     "    password2: str\n",
@@ -483,8 +502,8 @@
    "source": [
     "from typing import List\n",
     "\n",
-    "class Foo(BaseModel):\n",
     "\n",
+    "class Foo(BaseModel):\n",
     "    positive_ints: List[int]\n",
     "\n",
     "    @validator(\"positive_ints\", pre=True)\n",
@@ -499,15 +518,10 @@
     "            raise ValueError(f\"{item} is not positive\")\n",
     "        return item\n",
     "\n",
-    "display(\n",
-    "    Foo(positive_ints=(67.4, 2, True))\n",
-    ")\n",
-    "display(\n",
-    "    Foo(positive_ints=\"2,4,6,8\")\n",
-    ")\n",
-    "display(\n",
-    "    Foo(positive_ints=[\"-4\", 4, 0, 7])\n",
-    ")"
+    "\n",
+    "display(Foo(positive_ints=(67.4, 2, True)))\n",
+    "display(Foo(positive_ints=\"2,4,6,8\"))\n",
+    "display(Foo(positive_ints=[\"-4\", 4, 0, 7]))"
    ]
   },
   {
@@ -529,7 +543,6 @@
     "\n",
     "\n",
     "class NewUser(User):\n",
-    "\n",
     "    created_at: datetime = datetime.utcnow()"
    ]
   },
@@ -550,8 +563,8 @@
     "\n",
     "\n",
     "class NewUser(User):\n",
-    "\n",
     "    created_at: datetime = datetime.utcnow()\n",
+    "\n",
     "\n",
     "print(f\"NewUser defined at  {datetime.utcnow()}\")\n",
     "\n",
@@ -584,12 +597,12 @@
     "\n",
     "\n",
     "class NewUser(User):\n",
-    "\n",
     "    created_at: Optional[datetime]\n",
     "\n",
     "    @validator(\"created_at\", always=True)\n",
     "    def set_default_time(cls, created_at: Union[datetime, None]) -> datetime:\n",
     "        return datetime.utcnow() if created_at is None else created_at\n",
+    "\n",
     "\n",
     "print(f\"NewUser defined at  {datetime.utcnow()}\")\n",
     "\n",
@@ -626,23 +639,19 @@
     "\n",
     "\n",
     "class UserPassword(BaseModel):\n",
-    "\n",
     "    password1: str\n",
     "    password2: str\n",
     "\n",
     "    @root_validator\n",
     "    def passords_must_match(cls, values: dict[str, Any]) -> dict[str, Any]:\n",
-    "        pw1, pw2 = values.get('password1'), values.get('password2')\n",
+    "        pw1, pw2 = values.get(\"password1\"), values.get(\"password2\")\n",
     "        if pw1 is not None and pw2 is not None and pw1 != pw2:\n",
-    "            raise ValueError('passwords do not match')\n",
+    "            raise ValueError(\"passwords do not match\")\n",
     "        return values\n",
     "\n",
-    "display(\n",
-    "    UserPassword(password1=\"1234\", password2=\"1234\")\n",
-    ")\n",
-    "display(\n",
-    "    UserPassword(password1=\"1234\", password2=\"12345\")\n",
-    ")"
+    "\n",
+    "display(UserPassword(password1=\"1234\", password2=\"1234\"))\n",
+    "display(UserPassword(password1=\"1234\", password2=\"12345\"))"
    ]
   },
   {
@@ -744,7 +753,6 @@
    "outputs": [],
    "source": [
     "class Foo(BaseModel):\n",
-    "\n",
     "    bar: str\n",
     "\n",
     "    class Config:\n",
@@ -754,9 +762,8 @@
     "        max_anystr_length = 32\n",
     "        validate_assignment = True\n",
     "\n",
-    "display(\n",
-    "    Foo(bar=\"   hello SciPy!      \")\n",
-    ")"
+    "\n",
+    "display(Foo(bar=\"   hello SciPy!      \"))"
    ]
   },
   {
@@ -765,9 +772,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "display(\n",
-    "    Foo(bar=\"    baz   \")\n",
-    ")"
+    "display(Foo(bar=\"    baz   \"))"
    ]
   },
   {
@@ -810,11 +815,14 @@
    "source": [
     "from pydantic import validate_arguments\n",
     "\n",
+    "\n",
     "def login():\n",
     "    print(\"Successfully logged in!\")\n",
     "\n",
+    "\n",
     "def logout():\n",
     "    print(\"Invalid username or password\")\n",
+    "\n",
     "\n",
     "@validate_arguments\n",
     "def validate_credentials(\n",
@@ -822,7 +830,6 @@
     "    password: str,\n",
     "    registered_users: list[User],\n",
     ") -> None:\n",
-    "\n",
     "    for user in registered_users:\n",
     "        if (user.username == username) and (user.password1 == password):\n",
     "            login()\n",
@@ -945,8 +952,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "\n",
     "list(combinations([1, 2, 3], 2))"
    ]
   },
