--- a/notebooks/4-serialisation-and-deserialisation.ipynb
+++ b/notebooks/4-serialisation-and-deserialisation.ipynb
@@ -37,13 +37,13 @@
     "    },\n",
     "}\n",
     "\n",
+    "\n",
     "def serialize_then_deserialize(\n",
     "    serialization_function: Callable[[Any], str],\n",
     "    deserialization_function: Callable[[str], Any],\n",
     "    serialization_kwargs: Optional[dict[str, Any]] = None,\n",
     "    deserialization_kwargs: Optional[dict[str, Any]] = None,\n",
     ") -> None:\n",
-    "\n",
     "    if serialization_kwargs is None:\n",
     "        serialization_kwargs = {}\n",
     "    if deserialization_kwargs is None:\n",
@@ -164,14 +164,12 @@
     "\n",
     "\n",
     "class TemperatureSample(BaseModel):\n",
-    "\n",
     "    date: datetime.date\n",
     "    time: datetime.time\n",
     "    temperature: float\n",
     "\n",
     "\n",
     "class TemperatureData(BaseModel):\n",
-    "\n",
     "    data: list[TemperatureSample]"
    ]
   },
@@ -267,9 +265,7 @@
    "outputs": [],
    "source": [
     "fpath_temperature_data_yaml = Path.cwd() / \"my-data.yaml\"\n",
-    "raw_temperature_data = yaml.safe_load(\n",
-    "    fpath_temperature_data_yaml.read_text()\n",
-    ")\n",
+    "raw_temperature_data = yaml.safe_load(fpath_temperature_data_yaml.read_text())\n",
     "temperature_data = TemperatureData.parse_obj(\n",
     "    {\"data\": raw_temperature_data},\n",
     ")\n",
@@ -311,9 +307,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(\n",
-    "    shortened_temperature_data.json(indent=2)\n",
-    ")"
+    "print(shortened_temperature_data.json(indent=2))"
    ]
   },
   {
@@ -360,7 +354,6 @@
    "outputs": [],
    "source": [
     "class Point:\n",
-    "\n",
     "    def __init__(self, x: float, y: float) -> None:\n",
     "        self.x = x\n",
     "        self.y = y\n",
@@ -374,7 +367,7 @@
     "    def distance_to(self, other: \"Point\") -> float:\n",
     "        dx = self.x - other.x\n",
     "        dy = self.y - other.y\n",
-    "        return (dx**2 + dy**2)**0.5"
+    "        return (dx**2 + dy**2) ** 0.5"
    ]
   },
   {
@@ -393,7 +386,6 @@
    "outputs": [],
    "source": [
     "class LineSegment(BaseModel):\n",
-    "\n",
     "    p1: Point\n",
     "    p2: Point\n",
     "\n",
@@ -425,7 +417,6 @@
    "outputs": [],
    "source": [
     "class SerializablePoint(Point):\n",
-    "\n",
     "    def serialize(self) -> dict[str, Any]:\n",
     "        return {\"x\": self.x, \"y\": self.y}"
    ]
@@ -446,7 +437,6 @@
    "outputs": [],
    "source": [
     "class LineSegment(BaseModel):\n",
-    "\n",
     "    p1: SerializablePoint\n",
     "    p2: SerializablePoint\n",
     "\n",
@@ -519,8 +509,8 @@
    "source": [
     "from pydantic.validators import float_validator\n",
     "\n",
-    "class DeserializablePoint(SerializablePoint):\n",
     "\n",
+    "class DeserializablePoint(SerializablePoint):\n",
     "    @classmethod\n",
     "    def __get_validators__(cls):\n",
     "        yield cls.deserialize\n",
@@ -552,7 +542,6 @@
    "outputs": [],
    "source": [
     "class LineSegment(BaseModel):\n",
-    "\n",
     "    p1: DeserializablePoint\n",
     "    p2: DeserializablePoint\n",
     "\n",
